# generator-basic-cmake-gtest

./: LICENSE  README.md  package-lock.json  package.json
generators/app/: index.js
generators/app/cli/: project.js
generators/app/templates/: CMakeLists.txt
generators/app/templates/src/: ProjectClass.cpp  ProjectClass.h
generators/app/templates/test/: Test.cpp
